tilbage til astra

--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Rotate Theme
-Template: twentytwentyfour
+Template: astra
 Author: Caroline og Helena
 Version: 1.0.0
 Description: Stylish Child Theme based on Astra
