--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -144,7 +144,7 @@ Description: Stylish Child Theme based on Astra
     font-weight: var(--regular);
 }
 
-.ast-container {
+#main.site-main.partycontainer {
     display: grid !important;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) !important; 
     padding: 50px;
