--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -144,18 +144,8 @@ Description: Stylish Child Theme based on Astra
     font-weight: var(--regular);
 }
 
-#main.site-main.partycontainer {
-    display: grid !important;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) !important; 
-    padding: 50px;
-    width: 100%;
-    max-width: 1500px;
-    margin: 0 auto;
-    background-color: #f0ede6;
-  }
-  
-  .ast-container img {
-    border-bottom: solid 2px black;
-  }
+.site-main h2 {
+    font-size: 64px;
+}
 
 
