--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -159,6 +159,8 @@ Description: Stylish Child Theme based on Astra
   .banner {
     background-color: #313030;
     position: relative;
+    padding-block: 64px;
+    padding-inline: 16px;
 }
 
 
