--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -150,6 +150,8 @@ Description: Stylish Child Theme based on Astra
   width: 100%;
   max-width: 2000px;
   margin: 0 auto;
+  cursor: pointer;
+  
   }
   
 .cardcontainer article:hover {
