--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -213,7 +213,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 20px;
-  border-bottom: #3130309a;
+  border: solid 1px grey;
   width: 100%;
 }
 
