--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -53,8 +53,8 @@ Description: Stylish Child Theme based on Astra
     --spacing-2xl: 128px;
 
     /* font sizes Global*/
-    --fontSize-breadcrumbs: 12.8px;
-    --fontSize-body: 16px;
+    --fontSize-navigation: 12.8px;
+    --fontSize-body: 12.8px;
     --fontSize-h3: 20px;
     --fontSize-h2: 25px;
     --fontSize-h1: 31.25px;
@@ -163,6 +163,7 @@ Description: Stylish Child Theme based on Astra
 .cardcontainer article .indhold {
   margin-right: 16px;
   margin-left: 16px;
+  font-size: var(--fontSize-body);
 }
 
 .cardcontainer article .title {
@@ -173,11 +174,12 @@ Description: Stylish Child Theme based on Astra
 .cardcontainer article .pris {
   margin-top: 8px;
   margin-bottom: 8px;
+  font-weight: bold;
 }
 
 .circle {
-  width: 16px; 
-  height: 16px;
+  width: 8px; 
+  height: 8px;
   background-color: black;
   border-radius: 50%;
   margin-top: 0px;
@@ -212,6 +214,7 @@ body {
  border-bottom: solid 1px grey;
   padding: 0px 20px;
   width: 100%;
+  height: 50px;
   
 }
 
@@ -300,7 +303,7 @@ body {
 .site-header-secondary {
     background-color: var(--Bg-Primary);
     border-bottom: solid 1px lightgray;
-    padding: 10px 0px;
+    padding: 0px 0px;
     position: relative;
 }
 
@@ -329,6 +332,7 @@ body {
   z-index: 1; /* Sørg for, at menuen vises over andre elementer, om nødvendigt */
   top: 100%; /* Placer menuen under hovedmenuen */
   margin-left: 0;
+  height: 80px;
 }
 
 .menu-link {
@@ -341,11 +345,31 @@ body {
 
 .main-header-menu {
   position: static !important;
+  font-size: var(--fontSize-navigation);
+  font-weight: bold;
 }
 
 .main-navigation {
   position: static;
 }
+
+#menu-item-294 {
+  position: static;
+}
+
+#menu-item-294 .sub-menu {
+  display: flex;
+  flex-direction: row; /* Vis undermenuen som en kolonne */
+  background-color: var(--Bg-Primary);
+  position: absolute;
+  left: 0; /* Placer menuen helt til venstre */
+  width: 100vw; /* Gør bredden lig med parent containerens bredde */
+  z-index: 1; /* Sørg for, at menuen vises over andre elementer, om nødvendigt */
+  top: 100%; /* Placer menuen under hovedmenuen */
+  margin-left: 0;
+  height: 80px;
+}
+
 
 
 
