--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -379,6 +379,30 @@ body {
 }
 
 
+/* SINGLE VIEW STYLING */
+
+.single-view {
+  display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 32px;
+}
+.container_1 img{
+  height: 600px;
+}
+
+.size_flexbox_1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.size_flexbox_2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+
 
 
 
