--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -401,6 +401,14 @@ body {
   justify-content: space-between;
 }
 
+.circle_singleview {
+  width: 16px; 
+  height: 16px;
+  border-radius: 50%;
+  margin-top: 0px;
+  margin-bottom: 16px;
+  border: solid 2px grey;
+}
 
 
 
