carousel single view

--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -383,11 +383,10 @@ body {
 
 .single-view {
   display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 32px;
-}
-.container_1 img{
-  height: 600px;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 64px;
+    margin-right: 64px;
+    margin-left: 64px;
 }
 
 .size_flexbox_1 {
@@ -407,9 +406,92 @@ body {
   border-radius: 50%;
   margin-top: 0px;
   margin-bottom: 16px;
-  border: solid 2px grey;
+  border: solid 2px black;
 }
 
+
+
+
+
+
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 800px;
+  position: relative;
+  margin: auto;
+}
+
+/* gem billeder som en default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous knapper */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* når vihover, tilsæt en  black background color, som er lidt gennemsigtig */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+  color: #f2f2f2;
+}
+
+
+
+/* Nummer text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
 
 
 
