--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -7,141 +7,136 @@ Description: Stylish Child Theme based on Astra
 */
 
 .card {
-    font-family: var(--fontFamiliesFontSans);
-    cursor: pointer;
+  font-family: var(--fontFamiliesFontSans);
+  cursor: pointer;
 }
 
 .card img {
-    width: 100%;
-    height: auto;
-  }
+  width: 100%;
+  height: auto;
+}
 
 .card body_primary {
-    margin-top: var(--spaceCardStackMd);
-    margin-bottom: var(--spaceCardStackNone);
-    font-size: var(--body_primary);
-  }
+  margin-top: var(--spaceCardStackMd);
+  margin-bottom: var(--spaceCardStackNone);
+  font-size: var(--body_primary);
+}
 
 .card body_secondary {
-    margin-top: var(--spaceCardStackSm);
-    margin-bottom: var(--spaceCardStackMd);
-    font-size: var(--body_secondary);
-  }
+  margin-top: var(--spaceCardStackSm);
+  margin-bottom: var(--spaceCardStackMd);
+  font-size: var(--body_secondary);
+}
 
-  .card color {
-    margin-top: var(--spaceCardStackSm);
-    margin-bottom: var(--spaceCardStackMd);
-  }
+.card color {
+  margin-top: var(--spaceCardStackSm);
+  margin-bottom: var(--spaceCardStackMd);
+}
 
-  :root {
-    /* farver */
-    --Bg-Primary: #FCFCFC;
-    --text-Primary: #212121;
+:root {
+  /* farver */
+  --Bg-Primary: #fcfcfc;
+  --text-Primary: #212121;
 
-  
-  
-    /* font */
-    --fontFamiliesFontSans: Work Sans;
-    --fontFamiliesFontDisplay: Druk;
-  
-    /* spacing Global */
-    --spacing-xs: 4px;
-    --spacing-sm: 8px;
-    --spacing-md: 16px;
-    --spacing-lg: 32px;
-    --spacing-xl: 64px;
-    --spacing-2xl: 128px;
+  /* font */
+  --fontFamiliesFontSans: Work Sans;
+  --fontFamiliesFontDisplay: Druk;
 
-    /* font sizes Global*/
-    --fontSize-navigation: 12.8px;
-    --fontSize-body: 12.8px;
-    --fontSize-h3: 20px;
-    --fontSize-h2: 25px;
-    --fontSize-h1: 31.25px;
-    --fontSize-Display-secondary: 48.83px;
-    --fontSize-Display: 363.8px;
+  /* spacing Global */
+  --spacing-xs: 4px;
+  --spacing-sm: 8px;
+  --spacing-md: 16px;
+  --spacing-lg: 32px;
+  --spacing-xl: 64px;
+  --spacing-2xl: 128px;
 
-    /* Line height */
-    --lineHeights0: AUTO;
-    --lineHeightsBase: 1.5;
-    --lineHeightsHeading: 1.1;
+  /* font sizes Global*/
+  --fontSize-navigation: 12.8px;
+  --fontSize-body: 12.8px;
+  --fontSize-h3: 20px;
+  --fontSize-h2: 25px;
+  --fontSize-h1: 31.25px;
+  --fontSize-Display-secondary: 48.83px;
+  --fontSize-Display: 363.8px;
 
-     /* font weight */
-     --super: 700;
-     --semibold: 500;
-     --regular: 300;
-  
-    }
+  /* Line height */
+  --lineHeights0: AUTO;
+  --lineHeightsBase: 1.5;
+  --lineHeightsHeading: 1.1;
 
-  /*Typography token*/
-  .Display {
-    font-family: var(--fontFamiliesFontDisplay);
-    font-weight: var(--super);
-    font-size: var(--fontSize-Display);
-    line-height: var(--lineHeightsHeading);
+  /* font weight */
+  --super: 700;
+  --semibold: 500;
+  --regular: 300;
+}
 
+/*Typography token*/
+.Display {
+  font-family: var(--fontFamiliesFontDisplay);
+  font-weight: var(--super);
+  font-size: var(--fontSize-Display);
+  line-height: var(--lineHeightsHeading);
 }
 .Typography_Display_secondary {
-    font-family: var(--fontFamiliesFontDisplay);
-    font-weight: var(--semibold);
-    font-size: var(--fontSize-Display-secondary);
-    line-height: var(--lineHeightsHeading);
+  font-family: var(--fontFamiliesFontDisplay);
+  font-weight: var(--semibold);
+  font-size: var(--fontSize-Display-secondary);
+  line-height: var(--lineHeightsHeading);
 }
 
 .Typography_h1 {
-    font-family: var(--fontFamiliesFontSans);
-    font-size: var(--fontSize-h1);
-    line-height: var(--lineHeightsHeading);
-    font-weight: var(--semibold);
-
+  font-family: var(--fontFamiliesFontSans);
+  font-size: var(--fontSize-h1);
+  line-height: var(--lineHeightsHeading);
+  font-weight: var(--semibold);
 }
 
 .Typography_h2 {
-    font-family: var(--fontFamiliesFontSans);
-    font-size: var(--fontSize-h2);
-    line-height: var(--lineHeightsHeading);
-    font-weight: var(--semibold);
+  font-family: var(--fontFamiliesFontSans);
+  font-size: var(--fontSize-h2);
+  line-height: var(--lineHeightsHeading);
+  font-weight: var(--semibold);
 }
 .Typography_h3 {
-    font-family: var(--fontFamiliesFontSans);
-    font-size: var(--fontSize-h3);
-    line-height: var(--lineHeightsHeading);
-    font-weight: var(--semibold);
+  font-family: var(--fontFamiliesFontSans);
+  font-size: var(--fontSize-h3);
+  line-height: var(--lineHeightsHeading);
+  font-weight: var(--semibold);
 }
 
 .Typography_body_primary {
-    font-family: var(--fontFamiliesFontSans);
-    font-size: var(--fontSize-body);
-    line-height: var(--lineHeightsBase);
-    font-weight: var(--regular);
+  font-family: var(--fontFamiliesFontSans);
+  font-size: var(--fontSize-body);
+  line-height: var(--lineHeightsBase);
+  font-weight: var(--regular);
 }
 
 .Typography_body_secondary {
-    font-family: var(--fontFamiliesFontSans);
-    font-size: var(--fontSize-body);
-    line-height: var(--lineHeightsBase);
-    font-weight: var(--regular);
+  font-family: var(--fontFamiliesFontSans);
+  font-size: var(--fontSize-body);
+  line-height: var(--lineHeightsBase);
+  font-weight: var(--regular);
 }
 
 .Typography_button {
-    font-family: var(--fontFamiliesFontSans);
-    font-size: var(--fontSize-body);
-    line-height: var(--lineHeightsBase);
-    font-weight: var(--regular);
+  font-family: var(--fontFamiliesFontSans);
+  font-size: var(--fontSize-body);
+  line-height: var(--lineHeightsBase);
+  font-weight: var(--regular);
 }
 
 .Typography_navigation {
-    font-family: var(--fontFamiliesFontSans);
-    font-size: var(--fontSize-body);
-    line-height: var(--lineHeightsBase);
-    font-weight: var(--regular);
+  font-family: var(--fontFamiliesFontSans);
+  font-size: var(--fontSize-body);
+  line-height: var(--lineHeightsBase);
+  font-weight: var(--regular);
 }
 
 .Typography_breadcrumbs {
-    font-family: var(--fontFamiliesFontSans);
-    font-size: var(--fontSize-breadcrumbs);
-    line-height: var(--lineHeightsBase);
-    font-weight: var(--regular);
+  font-family: var(--fontFamiliesFontSans);
+  font-size: var(--fontSize-breadcrumbs);
+  line-height: var(--lineHeightsBase);
+  font-weight: var(--regular);
 }
 
 /*STYLING AF CARDS*/
@@ -154,12 +149,11 @@ Description: Stylish Child Theme based on Astra
   margin: 0 auto;
   cursor: pointer;
   margin-top: 64px;
-  
-  }
-  
+}
+
 .cardcontainer article:hover {
-    border: solid 1px black;
-  }
+  border: solid 1px black;
+}
 
 .cardcontainer article .indhold {
   margin-right: 16px;
@@ -179,34 +173,29 @@ Description: Stylish Child Theme based on Astra
 }
 
 .circle {
-  width: 8px; 
+  width: 8px;
   height: 8px;
   border-radius: 50%;
   margin-top: 0px;
   margin-bottom: 16px;
   border: solid 1px black;
 }
-  .banner {
-    background-color: #313030;
-    position: relative;
-    padding-block: 64px;
-    padding-inline: 256px;
+.banner {
+  background-color: #313030;
+  position: relative;
+  padding-block: 64px;
+  padding-inline: 256px;
 }
-
-
-
-
 
 /*STYLING AF HEADER*/
 
 /* Header Styling */
 .site-header {
- border-bottom: solid 1px grey;
+  border-bottom: solid 1px grey;
   padding: 0px 20px;
   width: 100%;
   height: 50px;
   font-weight: bold;
-  
 }
 
 /* Branding Styling */
@@ -217,9 +206,9 @@ Description: Stylish Child Theme based on Astra
 }
 
 .site-branding {
- display: flex;
- align-items: center;
- gap:32px;
+  display: flex;
+  align-items: center;
+  gap: 32px;
 }
 
 /* Navigation Styling */
@@ -286,54 +275,56 @@ Description: Stylish Child Theme based on Astra
   }
 }
 
-
-
 /*SEKUNDÆR HEADER*/
 /* Generel styling for hovednav og ikoner */
 .site-header,
 .site-header-secondary {
-    background-color: var(--Bg-Primary);
-    border-bottom: solid 1px lightgray;
-    padding: 0px 0px;
-    position: relative;
+  background-color: var(--Bg-Primary);
+  border-bottom: solid 1px lightgray;
+  padding: 0px 0px;
+  position: relative;
 }
 
 .site-branding img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .header-icons div {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .header-icons img {
-    max-width: 30px;
+  max-width: 30px;
 }
 
 /* ALT STYLING TIL DEN SEKUNDÆRE MENU */
 
 .menu-link {
   position: static;
-  
 }
 
 .main-header-menu {
   position: static !important;
   font-size: var(--fontSize-navigation);
-  
 }
 
 .main-navigation {
   position: static;
 }
 
-#menu-item-68, #menu-item-69, #menu-item-294, #menu-item-71 {
+#menu-item-68,
+#menu-item-69,
+#menu-item-294,
+#menu-item-71 {
   position: static;
 }
 
 /*styling af submenuen*/
-#menu-item-68 .sub-menu, #menu-item-69 .sub-menu, #menu-item-294 .sub-menu, #menu-item-71 .sub-menu  {
+#menu-item-68 .sub-menu,
+#menu-item-69 .sub-menu,
+#menu-item-294 .sub-menu,
+#menu-item-71 .sub-menu {
   display: flex;
   flex-direction: row; /* Vis undermenuen som en kolonne */
   background-color: var(--Bg-Primary);
@@ -350,7 +341,10 @@ Description: Stylish Child Theme based on Astra
 }
 
 /*styling af det første ord i sub menu*/
-#menu-item-510, #menu-item-509, #menu-item-478, #menu-item-502 {
+#menu-item-510,
+#menu-item-509,
+#menu-item-478,
+#menu-item-502 {
   font-weight: bold;
   color: #212121;
   margin-right: 16px;
@@ -364,18 +358,17 @@ Description: Stylish Child Theme based on Astra
   height: 60px !important;
 }
 .main-header-bar {
- background-color: var(--Bg-Primary);
+  background-color: var(--Bg-Primary);
 }
-
 
 /* SINGLE VIEW STYLING */
 
 .single-view {
   display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-gap: 64px;
-    margin-right: 64px;
-    margin-left: 64px;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 64px;
+  margin-right: 64px;
+  margin-left: 64px;
 }
 
 .size_flexbox_1 {
@@ -392,7 +385,7 @@ Description: Stylish Child Theme based on Astra
 }
 
 .circle_singleview {
-  width: 16px; 
+  width: 16px;
   height: 16px;
   border-radius: 50%;
   margin-top: 0px;
@@ -424,8 +417,7 @@ Description: Stylish Child Theme based on Astra
   font-size: 16px; /* Vi skal have variabler på i stedet */
 }
 
-
-.size_flexbox_1 .guide{
+.size_flexbox_1 .guide {
   font-weight: bold;
   text-decoration: underline 1px solid black;
 }
@@ -448,11 +440,6 @@ Description: Stylish Child Theme based on Astra
   font-size: 12.8px;
 }
 
-
-
-
-
-
 /* Slideshow container */
 .slideshow-container {
   max-width: 800px;
@@ -466,7 +453,8 @@ Description: Stylish Child Theme based on Astra
 }
 
 /* Next & previous knapper */
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -488,12 +476,11 @@ Description: Stylish Child Theme based on Astra
 }
 
 /* når vihover, tilsæt en  black background color, som er lidt gennemsigtig */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
   color: #f2f2f2;
 }
-
-
 
 /* Nummer text (1/3 etc) */
 .numbertext {
@@ -516,7 +503,8 @@ Description: Stylish Child Theme based on Astra
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #717171;
 }
 
@@ -527,14 +515,10 @@ Description: Stylish Child Theme based on Astra
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
-
-
-
-
-
-
-
-
