--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -189,7 +189,7 @@ Description: Stylish Child Theme based on Astra
   border: solid 1px black;
 }
 .banner {
-  background-color: #313030;
+  background-color: #212121;
   position: relative;
   padding-block: 64px;
   padding-inline: 256px;
@@ -541,14 +541,93 @@ Description: Stylish Child Theme based on Astra
   }
 }
 
-.footer-image {
-  max-width: 100%; /* Ensure the image doesn't exceed its container's width */
-  height: auto; /* Allow the height to adjust proportionally */
+/* footer */
+
+.custom-footer-container {
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(200px, 1fr)
+  ); /* Create a grid with 4 columns that adjust to available space */
+  grid-gap: 20px; /* Add some spacing between grid items */
+  padding: 20px;
+  justify-content: space-between;
 }
 
-/* Media query for screens with a maximum width of 768px (typical for tablets and phones) */
+.footer-column {
+  flex: 1;
+  /* min-width: 200px; Remove this line to allow the columns to automatically adjust */
+  margin-bottom: 20px;
+}
+
+.footer-list {
+  list-style-type: none;
+  padding: 0;
+  text-decoration: none;
+}
+
+.footer-list li {
+  padding: 5px 0;
+  text-decoration: none;
+}
+
+/* Styles for the sign-up form */
+.footer-newsletter-signup {
+  margin-top: 20px;
+}
+
+.footer-newsletter-signup h3 {
+  margin-bottom: 10px;
+}
+
+.footer-newsletter-signup form {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-newsletter-signup label {
+  margin-bottom: 10px;
+}
+
+.footer-newsletter-signup input[type="email"] {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.footer-newsletter-signup .submit-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  font-family: var(--fontFamiliesFontSans);
+  font-size: var(--fontSize-body);
+  line-height: var(--lineHeightsBase);
+  font-weight: var(--regular);
+}
+
+.footer-newsletter-signup .submit-button:hover {
+  background-color: #333;
+}
+
 @media (max-width: 768px) {
-  .footer-image {
-    max-width: 80%; /* Reduce the width on smaller screens to avoid overlap */
+  .custom-footer-container {
+    grid-template-columns: 1fr;
   }
+  .footer-logo-container {
+    width: 100%;
+  }
+}
+
+.footer-logo-container {
+  text-align: center;
+  padding: 20px;
+}
+
+.footer-logo {
+  max-width: 100px; /* set the maximum size of the logo */
+  height: auto; /* maintain aspect ratio */
 }
