--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -626,6 +626,8 @@ ul {
     align-content: center;
   }
   .logo-bund {
+    display: grid;
+    place-items: center;
     max-width: 50%;
   }
 
@@ -638,5 +640,20 @@ ul {
 
   .cardcontainer {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .single-view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    grid-gap: 0;
+  }
+
+  .slideshow-container img {
+    max-width: 70%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
   }
 }
