--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -555,6 +555,7 @@ Description: Stylish Child Theme based on Astra
   grid-gap: 20px;
   padding: 20px;
   justify-content: space-between;
+  border-top: 1px solid #313030;
 }
 
 .footer-column {
