--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -691,7 +691,7 @@ ul {
 .moving-logo {
   width: 100%; /* Adjust the logo size as needed */
   transition: opacity 0.3s ease; /* Add a smooth transition effect for opacity */
-  background-color: #f2f2f2;
+  background-color: #ffff;
 }
 
 .ast-main-header-wrap .main-header-bar-wrap {
