--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -5,7 +5,9 @@ Author: Caroline og Helena
 Version: 1.0.0
 Description: Stylish Child Theme based on Astra
 */
-
+body{
+  background-color: #ffffff !important;
+}
 @font-face {
   font-family: "drunk";
   src: url("fonts/Druk-Bold-Trial.otf") format("otf"),
