--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -684,9 +684,11 @@ ul {
   display: block;
   text-align: center;
   padding: 20px 0;
+  transition: opacity 0.3s ease;
 }
 
 .moving-logo {
   width: 100%; /* Adjust the logo size as needed */
   background-color: #ffff;
+  height: 50%;
 }
