--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -687,4 +687,5 @@ ul {
   transition: opacity 0.3s ease;
   width: 80%; /* Adjust the logo size as needed */
   background-color: #ffff;
+  position: fixed;
 }
